Proj 4: Implement a Q-Learning Driving Agent

--- a/Project 4 - Smartcab/report.ipynb
+++ b/Project 4 - Smartcab/report.ipynb
@@ -28,9 +28,11 @@
    "metadata": {},
    "source": [
     "### Code Snippet:\n",
-    "    def random_action(self):\n",
-    "        from random import choice\n",
-    "        return choice([None, 'forward', 'left', 'right'])"
+    "``` Python\n",
+    "def random_action(self):\n",
+    "    from random import choice\n",
+    "    return choice([None, 'forward', 'left', 'right'])\n",
+    "```"
    ]
   },
   {
@@ -85,14 +87,17 @@
    "metadata": {},
    "source": [
     "### Code Snippet\n",
-    "    # TODO: Update state\n",
-    "    legal_right = inputs['light'] == 'green' or inputs['left'] != 'forward'\n",
-    "    legal_forward = inputs['light'] == 'green'\n",
-    "    legal_left = inputs['light'] == 'green' and inputs['oncoming'] != 'right' and inputs['oncoming'] != 'forward'\n",
-    "    self.state = {'next_waypoint': self.next_waypoint, \n",
-    "                  'legal_right': legal_right, \n",
-    "                  'legal_forward': legal_forward, \n",
-    "                  'legal_left': legal_left}"
+    "\n",
+    "``` Python\n",
+    "    def eval_state(self, next_waypoint, inputs):\n",
+    "        legal_right = inputs['light'] == 'green' or inputs['left'] != 'forward'\n",
+    "        legal_forward = inputs['light'] == 'green'\n",
+    "        legal_left = inputs['light'] == 'green' and inputs['oncoming'] != 'right' and inputs['oncoming'] != 'forward'\n",
+    "        return {'next_waypoint': next_waypoint, \n",
+    "                'legal_right': legal_right,\n",
+    "                'legal_forward': legal_forward,\n",
+    "                'legal_left': legal_left}\n",
+    "```"
    ]
   },
   {
@@ -161,6 +166,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "With your driving agent being capable of interpreting the input information and having a mapping of environmental states, your next task is to implement the Q-Learning algorithm for your driving agent to choose the best action at each time step, based on the Q-values for the current state and action.\n",
+    "\n",
+    "Each action taken by the smartcab will produce a reward which depends on the state of the environment. The Q-Learning driving agent will need to consider these rewards when updating the Q-values. Once implemented, set the simulation deadline enforcement enforce_deadline to True. Run the simulation and observe how the smartcab moves about the environment in each trial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code Snippet\n",
+    "\n",
+    "``` Python\n",
+    "def Q_action(self, state):\n",
+    "    actions = []\n",
+    "    best_score = self.Q.get((str(state), None), self.default_Q_value)\n",
+    "    for action in [None, 'forward', 'left', 'right']:\n",
+    "        val = self.Q.get((str(state), action), self.default_Q_value)\n",
+    "        if val < best_score - 1e-9:\n",
+    "            # Better action was found before\n",
+    "            continue\n",
+    "        elif val > best_score + 1e-9:\n",
+    "            # This is a better action than the one(s) found before\n",
+    "            actions = [action]\n",
+    "            best_score = val\n",
+    "        else:\n",
+    "            # This action produces the same best_score so far\n",
+    "            actions.append(action)\n",
+    "\n",
+    "    from random import choice\n",
+    "    return choice(actions)\n",
+    "\n",
+    "def explore_exploite_action(self):\n",
+    "    from random import random\n",
+    "    if random() < self.epsilon:\n",
+    "        # Exploration\n",
+    "        print \"LearningAgent.explore_exploite_action(): Exploration\" # [debug]\n",
+    "        return self.random_action()\n",
+    "    else:\n",
+    "        # Exploitation\n",
+    "        print \"LearningAgent.explore_exploite_action(): Exploitation\" # [debug]\n",
+    "        return self.Q_action(self.state)\n",
+    "\n",
+    "def bellman(self, state, action, reward):\n",
+    "    new_next_waypoint = self.planner.next_waypoint()\n",
+    "    new_inputs = self.env.sense(self)\n",
+    "    new_state = self.eval_state(new_next_waypoint, new_inputs)\n",
+    "    new_action = self.Q_action(new_state)\n",
+    "\n",
+    "    old_val = self.Q.get((str(state), action), self.default_Q_value)\n",
+    "    update_val = reward + self.gamma * self.Q.get((str(new_state), new_action), self.default_Q_value)\n",
+    "\n",
+    "    return (1 - self.alpha) * old_val + self.alpha * update_val\n",
+    "\n",
+    "def update(self, t):\n",
+    "    # Gather inputs\n",
+    "    self.next_waypoint = self.planner.next_waypoint()  # from route planner, also displayed by simulator\n",
+    "    inputs = self.env.sense(self)\n",
+    "    deadline = self.env.get_deadline(self)\n",
+    "\n",
+    "    # TODO: Update state\n",
+    "    self.state = self.eval_state(self.next_waypoint, inputs)\n",
+    "\n",
+    "    # TODO: Select action according to your policy\n",
+    "    action = self.explore_exploite_action()\n",
+    "\n",
+    "    # Execute action and get reward\n",
+    "    reward = self.env.act(self, action)\n",
+    "\n",
+    "    # TODO: Learn policy based on state, action, reward\n",
+    "    self.Q[(str(self.state), action)] = self.bellman(self.state, action, reward)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 4:"
    ]
   },
@@ -174,7 +256,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. One major difference between the original behavior and the new one is that it can successfully reach the goal in more than 90% of the cases. Also, after the initial trials, the agent learns to obey the traffic law and the planner suggestions.\n",
+    "\n",
+    "2. This behavior is emerging because the agent learns that obeying the law would result in more reward in the long run. Also, it learns that the planner takes it to the destination where even more reward is achieved. On the other hand, the random actions were resulting in negative rewards in several cases."
+   ]
   },
   {
    "cell_type": "markdown",
