Proj 4: Improve the Q-Learning Driving Agent

--- a/Project 4 - Smartcab/report.ipynb
+++ b/Project 4 - Smartcab/report.ipynb
@@ -89,14 +89,14 @@
     "### Code Snippet\n",
     "\n",
     "``` Python\n",
-    "    def eval_state(self, next_waypoint, inputs):\n",
-    "        legal_right = inputs['light'] == 'green' or inputs['left'] != 'forward'\n",
-    "        legal_forward = inputs['light'] == 'green'\n",
-    "        legal_left = inputs['light'] == 'green' and inputs['oncoming'] != 'right' and inputs['oncoming'] != 'forward'\n",
-    "        return {'next_waypoint': next_waypoint, \n",
-    "                'legal_right': legal_right,\n",
-    "                'legal_forward': legal_forward,\n",
-    "                'legal_left': legal_left}\n",
+    "def eval_state(self, next_waypoint, inputs):\n",
+    "legal_right = inputs['light'] == 'green' or inputs['left'] != 'forward'\n",
+    "legal_forward = inputs['light'] == 'green'\n",
+    "legal_left = inputs['light'] == 'green' and inputs['oncoming'] != 'right' and inputs['oncoming'] != 'forward'\n",
+    "return {'next_waypoint': next_waypoint, \n",
+    "        'legal_right': legal_right,\n",
+    "        'legal_forward': legal_forward,\n",
+    "        'legal_left': legal_left}\n",
     "```"
    ]
   },
@@ -122,7 +122,7 @@
     "    1. `next_waypoint`: To represent the direction suggested by the planner\n",
     "    2. `legal_right`: To represent whether it is legal to turn right at the intersection\n",
     "    3. `legal_forward`: To represent whether it is legal to keep moving forward at the intersection\n",
-    "    4. `legal_left`: To preresent whether it is legal to turn left at the intersection\n",
+    "    4. `legal_left`: To represent whether it is legal to turn left at the intersection\n",
     "    \n",
     "2. Appropriateness of these states were achieved by:\n",
     "    1. `next_waypoint`: Since the `next_waypoint` affects the reward that would be achieved at each state, it is important to have it as part of our state as a representation of the smartcab planner\n",
@@ -168,7 +168,7 @@
    "source": [
     "With your driving agent being capable of interpreting the input information and having a mapping of environmental states, your next task is to implement the Q-Learning algorithm for your driving agent to choose the best action at each time step, based on the Q-values for the current state and action.\n",
     "\n",
-    "Each action taken by the smartcab will produce a reward which depends on the state of the environment. The Q-Learning driving agent will need to consider these rewards when updating the Q-values. Once implemented, set the simulation deadline enforcement enforce_deadline to True. Run the simulation and observe how the smartcab moves about the environment in each trial."
+    "Each action taken by the smartcab will produce a reward which depends on the state of the environment. The Q-Learning driving agent will need to consider these rewards when updating the Q-values. Once implemented, set the simulation deadline enforcement `enforce_deadline` to `True`. Run the simulation and observe how the smartcab moves about the environment in each trial."
    ]
   },
   {
@@ -273,6 +273,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Your final task for this project is to enhance your driving agent so that, after sufficient training, the smartcab is able to reach the destination within the allotted time safely and efficiently. \n",
+    "\n",
+    "Parameters in the Q-Learning algorithm, such as the learning rate (**`alpha`**), the discount factor (**`gamma`**) and the exploration rate (**`epsilon`**) all contribute to the driving agent’s ability to learn the best action for each state.\n",
+    "\n",
+    "To improve on the success of your smartcab:\n",
+    "\n",
+    "- Set the number of trials, `n_trials`, in the simulation to 100.\n",
+    "- Run the simulation with the deadline enforcement `enforce_deadline` set to `True` (you will need to reduce the update delay `update_delay` and set the `display` to `False`).\n",
+    "- Observe the driving agent’s learning and smartcab’s success rate, particularly during the later trials.\n",
+    "- Adjust one or several of the above parameters and iterate this process.\n",
+    "\n",
+    "This task is complete once you have arrived at what you determine is the best combination of parameters required for your driving agent to learn successfully."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 5:"
    ]
   },
@@ -286,7 +304,80 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For `alpha`, `gamma`, and `epsilon`, I used the following values: `[0.1, 0.5, 0.9]`. Using these values, the code provided above was run over 100 trials and the success rate is reported in the following tables:\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th></th>\n",
+    "    <th colspan=\"3\">Epsilon=0.1</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><br></td>\n",
+    "    <td>Gamma=0.1</td> <td>Gamma=0.5</td> <td>Gamma=0.9</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.1</td>\n",
+    "    <td>0.99<br></td> <td>0.92<br></td> <td>0.90<br></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.5</td>\n",
+    "    <td>0.98<br></td> <td>0.90<br></td> <td>0.88</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.9</td>\n",
+    "    <td>0.96<br></td> <td>0.94<br></td> <td>0.82</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th></th>\n",
+    "    <th colspan=\"3\">Epsilon=0.5</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><br></td>\n",
+    "    <td>Gamma=0.1</td> <td>Gamma=0.5</td> <td>Gamma=0.9</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.1</td>\n",
+    "    <td>0.70<br></td> <td>0.60</td> <td>0.54</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.5</td>\n",
+    "    <td>0.64</td> <td>0.54</td> <td>0.49</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.9</td>\n",
+    "    <td>0.73</td> <td>0.55</td> <td>0.45</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th></th>\n",
+    "    <th colspan=\"3\">Epsilon=0.9</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><br></td>\n",
+    "    <td>Gamma=0.1</td> <td>Gamma=0.5</td> <td>Gamma=0.9</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.1</td>\n",
+    "    <td>0.27</td> <td>0.24</td> <td>0.24</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.5</td>\n",
+    "    <td>0.21</td>  <td>0.23</td> <td>0.22</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Alpha=0.9</td>\n",
+    "    <td>0.32</td> <td>0.26</td> <td>0.24</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "As we can see from the tables above. The optimal values for `alpha`, `gamma`, and `epsilon` are `(alpha = 0.1, gamma = 0.1, epsilon = 0.1)` with success rate 0.99"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,13 +390,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Does your agent get close to finding an optimal policy, i.e. reach the destination in the minimum possible time, and not incur any penalties? How would you describe an optimal policy for this problem?**"
+    "**Does your agent get close to finding an optimal policy, i.e. reach the destination in the minimum possible time, and not incur any penalties? How would you describe an optimal policy for this problem?**\n",
+    "\n",
+    "Yes. By looking at value for Q, the optimal policy could be extracted as follow:\n",
+    "\n",
+    "1. As long as the `next_waypoint` is giving a legal move (Ex: `next_waypoint = left` and `legal_left = true`), the agent follows executes the `next_waypoint` action.\n",
+    "2. When the `next_waypoint` is an illegal move, the agent should execute the `None` action (i.e. stay in its place)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Q Values from one of the runs:\n",
+    "\n",
+    "```\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'forward', 'legal_right': False, 'legal_left': False}\", 'forward') -0.1\n",
+    "\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': False}\", None) 0.0\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': False}\", 'forward') -0.86491482\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': False}\", 'left') -0.87842334540\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': False}\", 'right') -0.2690066011\n",
+    "\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': False}\", None) 0.0\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': False}\", 'forward') -0.3439\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': False}\", 'left') -0.3439\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': False}\", 'right') -0.129971475844\n",
+    "\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': False}\", None) 0.0567332846388\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': False}\", 'forward') -0.2975459219\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': False}\", 'left') -0.293771039618\n",
+    "(\"{'legal_forward': False, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': False}\", 'right') 3.18236699359\n",
+    "\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': True}\", None) 0.312506404171\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': True}\", 'forward') 3.48707180223\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': True}\", 'left') -0.113783784226\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'forward', 'legal_right': True, 'legal_left': True}\", 'right') -0.199865794218\n",
+    "\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': True}\", None) 0.0565135031121\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': True}\", 'left') 3.14713894324\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'left', 'legal_right': True, 'legal_left': True}\", 'right') -0.0705100757644\n",
+    "\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': True}\", None) 0.0571260333905\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': True}\", 'forward') -0.059418868388\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': True}\", 'left') -0.033492789082\n",
+    "(\"{'legal_forward': True, 'next_waypoint': 'right', 'legal_right': True, 'legal_left': True}\", 'right') 3.08395691024\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
