Fixed some spacing issues

--- a/Project 5 - Capstone/capstone.ipynb
+++ b/Project 5 - Capstone/capstone.ipynb
@@ -1610,7 +1610,8 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train_transform, X_test_transform, y_train_transform, y_test_transform = train_test_split(X_transform, y_all, \n",
+    "X_train_transform, X_test_transform, y_train_transform, y_test_transform = train_test_split(X_transform,\n",
+    "                                                                                            y_all, \n",
     "                                                                                            test_size=0.1, \n",
     "                                                                                            random_state=0, \n",
     "                                                                                            stratify = y_all)"
@@ -2245,10 +2246,11 @@
     "\n",
     "# Since the train-split in Section 4.1 is done after transformation, we need another split based on scaled data\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train_scaled, X_test_scaled, y_train_scaled, y_test_scaled = train_test_split(X_transform, y_all, \n",
-    "                                                                                            test_size=0.1, \n",
-    "                                                                                            random_state=0, \n",
-    "                                                                                            stratify = y_all)\n",
+    "X_train_scaled, X_test_scaled, y_train_scaled, y_test_scaled = train_test_split(X_transform, \n",
+    "                                                                                y_all, \n",
+    "                                                                                test_size=0.1, \n",
+    "                                                                                random_state=0, \n",
+    "                                                                                stratify = y_all)\n",
     "\n",
     "# Build the grid search\n",
     "from sklearn.model_selection import GridSearchCV\n",
