Capstone: Change Accuracy to Recall

--- a/Project 5 - Capstone/capstone.ipynb
+++ b/Project 5 - Capstone/capstone.ipynb
@@ -80,10 +80,10 @@
    "source": [
     "First of all, we start by defining two important metrics:\n",
     "\n",
-    "1. Accuracy: It is the percentage of datapoints that are correctly classified in a certain class (label) from all the datapoints that actually belongs to that class (label). Accuracy measures the ability of a learner to find the datapoints belonging to a certain class. Having a low accuracy means that the learner is incorrectly classifying several datapoints that belong to a given class.\n",
+    "1. Recall: It is the percentage of datapoints that are correctly classified in a certain class (label) from all the datapoints that actually belongs to that class (label). Recall measures the ability of a learner to find the datapoints belonging to a certain class. Having a low recall means that the learner is incorrectly classifying several datapoints that belong to a given class.\n",
     "2. Precision: It is the percentage of datapoint that are correctly classified in a certain class (label) from all the datapoints that were classified by the learner as belonging to that class (label). Precision measures the ability of a learner to include only datapoints from a given class when classifying that class. Having a low precision means that the learner is classifying several datapoints that are not part of a given class as being part of that class.\n",
     "\n",
-    "To better understand Accuracy and Precision, let's consider the following case where a learner should identify certain images as being pictures of a dog (label: 1) or not (label: 0):\n",
+    "To better understand Recall and Precision, let's consider the following case where a learner should identify certain images as being pictures of a dog (label: 1) or not (label: 0):\n",
     "\n",
     "\n",
     "<table>\n",
@@ -113,24 +113,24 @@
     "    </tr>\n",
     "</table>\n",
     "\n",
-    "In this example, the learner correctly identifies 2 pictures of dogs whereas the total number actually was 3. This gives a 67% accuracy. On the other hand, the learner correctly identifies 2 pictures of dogs whereas the total number of classification by the learner for a dog. This gives a 50% precision.\n",
+    "In this example, the learner correctly identifies 2 pictures of dogs whereas the total number actually was 3. This gives a 67% recall. On the other hand, the learner correctly identifies 2 pictures of dogs whereas the total number of classification by the learner for a dog is 4. This gives a 50% precision.\n",
     "\n",
-    "Note that the accuracy and precision are subject to a given class (in this case: class 1). In binary classification, the accuracy and precision (and the f1 score that will be discussed below) are subject to class 1 (or True).\n",
+    "Note that the recall and precision are subject to a given class (in this case: class 1). In binary classification, the recall and precision (and the f1 score that will be discussed below) are subject to class 1 (or True).\n",
     "\n",
     "\n",
-    "For the model to be built based on the provided dataset to address the problem statement, it is important to use metric that emphasises on both accuracy and precision:\n",
+    "For the model to be built based on the provided dataset to address the problem statement, it is important to use metric that emphasises on both recall and precision:\n",
     "\n",
-    "1. Accuracy: Accuracy of the model is important because the HR department would want to identify a good percentage of those at risk of leaving. Having a model with good accuracy would result in identifying that required good percentage.\n",
+    "1. Recall: Recall of the model is important because the HR department would want to identify a good percentage of those at risk of leaving. Having a model with good recall would result in identifying that required good percentage.\n",
     "2. Precision: While it is important to identify those in need for motivation to stay in the company, it is important for the HR department to not waste time on those who are actually not at risk of leaving the company. Having good precision means that HR department is focusing more energy on those who really need help.\n",
     "\n",
-    "A good metric to capture this need is the F Score (aka F1 Score). F Score gives a metric that is balanced between both accuracy and precision. It is calculated according to the following formula:\n",
+    "A good metric to capture this need is the F Score (aka F1 Score). F Score gives a metric that is balanced between both recall and precision. It is calculated according to the following formula:\n",
     "\n",
-    "$$F1 = 2 \\frac{Accuracy . Precision}{Accuracy + Precision}$$\n",
+    "$$F1 = 2 \\frac{Recall . Precision}{Recall + Precision}$$\n",
     "\n",
     "\n",
     "In the above example, the F1 score is:\n",
     "\n",
-    "$$F1 = 2 \\frac{Accuracy . Precision}{Accuracy + Precision} = 2 \\frac{0.67 . 0.5}{0.67 + 0.5} ≈ 0.573$$"
+    "$$F1 = 2 \\frac{Recall . Precision}{Recall + Precision} = 2 \\frac{0.67 . 0.5}{0.67 + 0.5} ≈ 0.573$$"
    ]
   },
   {
@@ -2406,7 +2406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it could be seen from the previous section, having the parameter sweep enabled us to enhance the f1 score from 0.79 to 0.90. This value is a very good improvement over the benchmark. It reflects the high accuracy and precision of the final learner.\n",
+    "As it could be seen from the previous section, having the parameter sweep enabled us to enhance the f1 score from 0.79 to 0.90. This value is a very good improvement over the benchmark. It reflects the high recall and precision of the final learner.\n",
     "\n",
     "With that, we have a learner that is:\n",
     "\n",
